<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_catatan"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="start"
        android:hint="@string/ketikCatatan" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorButtonNormal"
        android:text="@string/saveNotes"
        android:textColor="@color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorButtonNormal"
        android:onClick="read"
        android:text="@string/readNotes"
        android:textColor="@color/black" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorButtonNormal"
        android:onClick="save_sdcard"
        android:text="@string/saveNotes_SDCard"
        android:textColor="@color/black" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorButtonNormal"
        android:onClick="read_sdcard"
        android:text="@string/readNotes_SDCard"
        android:textColor="@color/black" />

</LinearLayout>